RESOLVED - 306634: [design][fancy][business] Shell menu bar background color does not fit https://bugs.eclipse.org/bugs/show_bug.cgi?id=306634

--- a/bundles/org.eclipse.rap.design.example/theme/business/business.css
+++ b/bundles/org.eclipse.rap.design.example/theme/business/business.css
@@ -420,6 +420,12 @@ Shell.toolbarLayer {
   border: none;
 }
 
+/* ToolBar */
+
+ToolBar {
+  background-color: #ffffff;
+}
+
 /* Tree */
 
 Tree {
