--- a/bundles/org.eclipse.rap.design.example/theme/fancy/fancy.css
+++ b/bundles/org.eclipse.rap.design.example/theme/fancy/fancy.css
@@ -410,6 +410,12 @@ Shell.toolbarLayer {
   border: none;
 }
 
+/* ToolBar */
+
+ToolBar {
+  background-color: #ffffff;
+}
+
 /* Tree */
 
 Tree {
